--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,20 @@
 	color: #8a8a8a;
 }
 
-#home-body {
-	background: url("../images/big_bg.jpg");
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	padding-top: 20px;
+body {
+	background:#F0F0F0;
 }
 
 .logo {
 	margin-bottom: 70px;
 }
 
+span {
+	font-size: 16px;
+}
+
 header {
+	background: #FFF;
 	width: 100%;
 	height: 110px;
 	border-bottom: 1px solid #c2c2c2;
@@ -203,4 +204,43 @@ header #topnav {
 
 .margin-right-5 {
 	margin-right: 5px;
+}
+
+.salary {
+	display: block;
+	color: #F7941D;
+	font-size: 18px;
+}
+.logo-box {
+	width: 150px;
+	height: 80px;
+	padding: 3px;
+	border: solid 1px #c2c2c2;
+	margin: auto;
+}
+.display-block {
+	display: block;
+}
+
+.publish-date, .view-count {
+	background-position: left center;
+	background-repeat: no-repeat !important;
+	padding-left: 27px;
+}
+
+.publish-date {
+	background: url(../images/ic_date_range.png);
+	
+}
+.view-count {
+	background: url(../images/ic_remove_red_eye.png);
+}
+
+.company-logo {
+	width: 100px;
+	margin-bottom: 20px;
+}
+
+.top-company {
+	
 }
