--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
 	margin-bottom: 70px;
 }
 
+.bg-first-page {
+	background: url("../images/big_bg.jpg") no-repeat;
+}
+
 span {
 	font-size: 16px;
 }
