--- a/css/home.css
+++ b/css/home.css
@@ -84,6 +84,10 @@ a.company-name {
 }
 
 .activity-box {
-    padding: 10px 10px 0 10px;
-    border-bottom: 1px dotted #c2c2c2;
+	padding: 10px 10px 0 10px;
+	border-bottom: 1px dotted #c2c2c2;
+}
+
+.work-location {
+	display: none;
 }
