--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background:#F0F0F0;
+	background:#E4EEF2;
 }
 
 header {
@@ -19,6 +19,10 @@ header #topnav {
 	width: 1060px;
 	height: 100%;
 	margin: auto;
+}
+
+nav {
+	display: none;
 }
 
 .none-padding-left {
@@ -85,6 +89,14 @@ hr.fancy-hr {
 	font-weight: bolder;
 }
 
+.info-text {
+	color: #02A8F3;
+}
+
+.warning-text {
+	color: #e5760d;
+}
+
 .higher-line {
 	line-height: 28px;
 }
@@ -97,12 +109,6 @@ h1.title {
 	margin-bottom: 3px;
 }
 
-.info {
-	color: #02A8F3;
-}
-.warning {
-	color: #e5760d;
-}
 
 #footer {
 	height: 50px;
@@ -111,3 +117,9 @@ h1.title {
 	text-align: center;
 	line-height: 50px;
 }
+
+.activity-box {
+	margin-bottom: 15px;
+}
+
+@import url("smart.css");
